# ft_otp

./: .gitignore  enter-nix-flake-env.sh  flake.nix  ft-otp.cabal  readme.md
.github/workflows/: cross-compile.yml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
doc/: ft_otp.md  rfc4226.txt  rfc6238.txt  shs.md
src/: Main.hs
test/: Spec.hs  e2e-test.sh  ft_otp.key  hotp-test.sh  key.hex  key2.hex
