cabal-version: 3.0
name: ft-otp
version: 0.1.0.0
synopsis: Time-based One-Time Password (TOTP) implementation
description: A TOTP system capable of generating ephemeral passwords from a master key, based on RFC 6238.
license: MIT
author: yui
maintainer: nisshi.yui79@gmail.com
category: Security
build-type: Simple

executable ft_otp
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
    base,
    base16-bytestring,
    binary,
    bytestring,
    cryptohash-sha1,
    directory,
    filepath,
    text,
    time,

  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

-- test suite using hspec
test-suite ft_otp_test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends:
    base,
    hspec,
